# k8s-mcp

./: .actrc  .gitignore  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.githooks/: commit-msg  pre-commit
.github/workflows/: audit.yml  ci.yml  pages.yml  release-please.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/format/: mod.rs  table.rs
src/k8s/: adaptive.rs  client.rs  config.rs  discovery.rs  metrics.rs  mod.rs  resources.rs  version.rs
src/mcp/: mod.rs  protocol.rs  server.rs  transport.rs
src/tools/: api_resources.rs  context.rs  events.rs  logs.rs  mod.rs  registry.rs  top.rs  version.rs
src/tools/core/: delete.rs  get.rs  list.rs  mod.rs
tests/: integration_tests.rs  unit_tests.rs
tests/common/: fixtures.rs  mocks.rs  mod.rs
tests/integration/: kind.rs  mod.rs  test_mcp_protocol.rs  test_resource_operations.rs
tests/unit/: mod.rs
tests/unit/format/: mod.rs  output_format.rs  table.rs
tests/unit/k8s/: client.rs  config.rs  discovery.rs  metrics.rs  mod.rs  resources.rs
tests/unit/mcp/: mod.rs  protocol.rs  server.rs  transport.rs
tests/unit/tools/: api_resources.rs  context.rs  core.rs  events.rs  logs.rs  mod.rs  registry.rs  top.rs
